syntax = "proto3";

message Session {
  oneof session {
    string name = 1;
    uint32 id = 2;
  }
}

message DeviceProperties {
  string name = 1;
  string model = 2;
  string vendor = 3;
  string serial_number = 4;
}

message EnumerateDevicesRequest {}

message EnumerateDevicesResponse {
  repeated DeviceProperties devices = 1;
}

message ReserveRequest {
  // client defined string representing a set of reservable resources
  string reservation_id = 1;
  // client defined identifier for a specific client
  string client_id = 2;
}

message ReserveResponse {
  bool is_reserved = 1;
}

message IsReservedByClientRequest {
  // client defined string representing a set of reservable resources
  string reservation_id = 1;
  // client defined identifier for a specific client
  string client_id = 2;
}

message IsReservedByClientResponse {
  bool is_reserved = 1;
}

message UnreserveRequest {
  // client defined string representing a set of reservable resources
  string reservation_id = 1;
  // client defined identifier for a specific client
  string client_id = 2;
}

message UnreserveResponse {
  bool is_unreserved = 1;
}

message ResetServerRequest {}

message ResetServerResponse {
  bool is_server_reset = 1;
}
